--- a/HTML/HTMLCSS 5 fazendo/style.css
+++ b/HTML/HTMLCSS 5 fazendo/style.css
@@ -41,4 +41,5 @@ body{
     text-decoration: none;
     background-color: transparent;
     border: 2px solid var(--branco_principal);
+    padding: 1em;
 }
