--- a/HTML/HTMLCSS Grid/style.css
+++ b/HTML/HTMLCSS Grid/style.css
@@ -1,6 +1,6 @@
 .grid {
     display: grid;
-    grid-template-rows: repeat(7, 100px);
+    grid-auto-rows: 100px;
     grid-template-columns: 240px;
     gap: 1em;
 }
@@ -8,29 +8,37 @@
 .header {
     background-color: rgba(0, 255, 255, 0.575);
     text-align: center;
-    grid-column: 1 / 5;
+    grid-column: 1 / 6;
 }
 
 .nav {
     background-color: blueviolet;
     text-align: center;
-    grid-column: 1/5;
+    grid-row: 2/8;
 }
 
 .section {
     background-color: chartreuse;
     text-align: center;
-    grid-row: 3/8;
+    grid-column: 2/6;
 }
 
 .article {
     background-color: crimson;
     text-align: center;
-    grid-column: 2/5;
+    grid-column: 1/5;
 }
 
 .footer {
     background-color: rgba(20, 173, 166, 0.514);
     text-align: center;
-    grid-row: ;
+    grid-row: 8;
+    grid-column: 1/6;
+}
+
+.teste {
+    display: grid;
+    grid-auto-rows: 100px;
+    grid-column: 2/6;
+    gap: 10px;
 }
