--- a/HTML/HTMLCSS Grid2/style.css
+++ b/HTML/HTMLCSS Grid2/style.css
@@ -45,4 +45,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-bottom: 20vh;
 }   
+
+.container__main3 {
+    display: flex;
+    flex-direction: row;
+}
