--- a/HTML/HTMLCSS 6/style.css
+++ b/HTML/HTMLCSS 6/style.css
@@ -1,12 +1,19 @@
-:root{
-    --fundo_cor: #EBECEE;
+@import url(styles/header.css);
+@import url(styles/banner.css);
 
+:root{
+    --fundo_cor: #c1cadb;
+    --branco: #FFFFFF;  
+    --laranja: #EB9B00;
+    --azul_degrade: linear-gradient(160deg, #002F52 0%, #326589 100%);
+    --fonte_principal:"Poppins";
 }
 
 body {
-    padding: 0px;
-    margin: 0px;
     background-color: var(--fundo_cor);
+    font-family: var(--fonte_principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 h1 {
