--- a/HTML/HTMLCSS 6/style.css
+++ b/HTML/HTMLCSS 6/style.css
@@ -1,11 +1,15 @@
 @import url(styles/header.css);
 @import url(styles/banner.css);
 @import url(styles/carrossel.css);
+@import url(styles/topicos.css);
+@import url(styles/contato.css);
+@import url(styles/footer.css);
 
 :root{
     --fundo_cor: #c1cadb;
     --branco: #FFFFFF;  
     --laranja: #EB9B00;
+    --azul_escuro: #002F52;
     --azul_degrade: linear-gradient(160deg, #002F52 0%, #326589 100%);
     --fonte_principal:"Poppins";
 }
