--- a/HTML/HTMLCSS 6/styles/banner.css
+++ b/HTML/HTMLCSS 6/styles/banner.css
@@ -34,3 +34,19 @@
     color: var(--branco);
     background: url(../assets/Pesquisa.svg) no-repeat;
 }
+
+@media screen and (min-width: 1000px) {
+
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7.5em;
+    }
+    
+}
