--- a/HTML/HTMLCSS 6/styles/carrossel.css
+++ b/HTML/HTMLCSS 6/styles/carrossel.css
@@ -174,3 +174,29 @@
 .descricao__juliana {
     margin: 1em 0 1.5em 0.5em;
 }
+
+@media screen and (min-width: 1000px) {
+    .carrossel__titulo {
+        font-size: 26px;
+        margin: 0 0 1em 0;
+    }
+
+    .swiper {
+        width: 80%;
+    }
+
+    .swiper-button-prev, .swiper-button-next {
+        display: block;
+        top: 50%;
+    }
+
+    .card {
+        width: 60%;
+        margin: 1em auto;
+    }
+
+    .autor {
+        width: 60%;
+        margin: 1em auto;
+    }
+}
