--- a/HTML/HTMLCSS 6/styles/contato.css
+++ b/HTML/HTMLCSS 6/styles/contato.css
@@ -13,7 +13,6 @@
     background-clip: text;
     -webkit-background-clip: text;
     margin: 1em;
-    text-align: center;
 }
 
 .contato__texto {
@@ -32,7 +31,7 @@
     border: 1px solid var(--azul_escuro);
     padding: 1em;
     border-radius: 24px;
-    width: 85vw;
+    width: 80%;
     color: var(--azul_escuro);
 }
 
@@ -42,4 +41,26 @@
     background-image: url(../assets/Email.svg);
     background-repeat: no-repeat;
     padding-left: 2em;
+}
+
+@media screen and (min-width: 1000px) {
+    .contato__descricao {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato__titulo {
+        font-size: 24px;
+    }
+
+    .contato__email {
+        width: 40%;
+        height: 5%;
+        margin: 0 22em;
+    }
+
+    .contato__texto {
+        font-size: 18px;
+    }
 }
