--- a/HTML/HTMLCSS 6/styles/header.css
+++ b/HTML/HTMLCSS 6/styles/header.css
@@ -60,3 +60,61 @@
 .container__botao {
     display: none;
 }
+
+.container__titulo, .container__titulo--negrito {
+    display: none;
+}
+
+.opcoes {
+    display: none;
+}
+
+
+@media screen and (min-width: 1000px) {
+    .container__titulo, .container__titulo--negrito {
+        font-family: var(--fonte_secundaria);
+        font-size: 30px;
+        display: block;
+    }
+    
+    .container__titulo {
+        font-weight: 400;
+    }
+
+    .container__titulo--negrito {
+        font-weight: 700;
+    }
+
+    .opcoes{
+        display: flex;
+    }
+
+    .opcoes__item{
+        padding: 0 1em;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-family: var(--fonte_secundaria);
+    }
+
+    .opcoes__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .container__imagem-transparente {
+        display: none;
+    }
+
+    .cabecalho__menu-hamburguer {
+        display: none;
+    }
+
+    .opcoes__botao:checked ~ .lista-menu {
+        display: block;
+    }
+
+    .opcoes__botao {
+        display: none;
+    }
+        
+}
