--- a/HTML/HTMLCSS 6/styles/topicos.css
+++ b/HTML/HTMLCSS 6/styles/topicos.css
@@ -36,3 +36,13 @@
     line-height: normal;
     text-decoration: none;
     }
+
+@media screen and (min-width: 1000px) {
+    .topicos__titulo {
+        font-size: 24px;
+    }
+
+    .topicos__link {
+        font-size: 20px;
+    }
+}
