--- a/HTML/HTMLCSS 6/styles/contato.css
+++ b/HTML/HTMLCSS 6/styles/contato.css
@@ -64,3 +64,15 @@
         font-size: 18px;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .contato__descricao {
+        padding: 1em 30vw;
+    }
+
+    .contato__email {
+        width: 30%;
+        margin: 0 0 1em 45em;
+    }
+
+}
