--- a/HTML/HTMLCSS 6/styles/topicos.css
+++ b/HTML/HTMLCSS 6/styles/topicos.css
@@ -46,3 +46,9 @@
         font-size: 20px;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .topicos {
+        padding: 1em 30vw;
+    }
+}
