--- a/JS/Front-end/JavaScriptWeb4/style.css
+++ b/JS/Front-end/JavaScriptWeb4/style.css
@@ -23,6 +23,10 @@ h1 {
     font-size: 5em;
 }
 
+h2 {
+    font-size: 4em;
+}
+
 h3 {
     font-size: 2em;
     margin-top: 20px;
@@ -34,7 +38,7 @@ h3 {
 }
 
 .box {
-    border: 2px solid var(--bg-color);
+    border: 2px solid var(--cor-primaria);
     display: inline-block;
     font-size: 4em;
     padding: 10px;
